# poi-examples

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  PACKAGE_README.md  QUICKSTART.md  README.md  REPOSITORY_STRUCTURE.md  demo.py  poi_config_example.yaml  pyproject.toml  setup.py
examples/: basic_usage.py  langgraph_integration.py
tests/: __init__.py  test_receipt.py
utils/: README.md  generate_certificates.py  generate_certificates_simple.py  install_package.py  setup_environment.py
